--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <label for="number">Bombs:</label>
       <input type="number" id="number" name="number">
 <!--  -->
-      <button type="button" onclick="launch()">Launch</button>
+      <button type="button" onclick="launch()">bomba raketa!!</button>
     </form>
     <div id="output"></div>
     <script>
