--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rocket Launcher</title>
+    <title>قاذفة الصواريخ</title>
   </head>
   <body>
     <img src="image.jpg" alt="" width="1000" height="500">
