--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>قاذفة الصواريخ</title>
+    <title>bomba lonchir</title>
   </head>
   <body>
     <img src="image.jpg" alt="" width="1000" height="500">
@@ -10,16 +10,16 @@
         <source src="audio.mp3" type="audio/mp3">
     </audio>
     <form>
-      <label for="text">Country:</label>
+      <label for="text">country neam:</label>
       <input type="text" id="text" name="text">
 <!--  -->
-      <label for="text">Region/State:</label>
+      <label for="text">reigon or state:</label>
       <input type="text" id="text" name="text">
 <!--  -->
-      <label for="text">City:</label>
+      <label for="text">city name</label>
       <input type="text" id="text" name="text">
 <!--  -->
-      <label for="number">Bombs:</label>
+      <label for="number">bombas</label>
       <input type="number" id="number" name="number">
 <!--  -->
       <button type="button" onclick="launch()">bomba raketa!!</button>
@@ -27,7 +27,7 @@
     <div id="output"></div>
     <script>
       function launch() {
-        document.getElementById("output").innerHTML = "<h1>Launched</h1>";
+        document.getElementById("output").innerHTML = "<h1>bomba raketa lonched end will bi arived on 48 hours</h1>";
       }
     </script>
   </body>
