--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <source src="audio.mp3" type="audio/mp3">
     </audio>
     <form>
-      <label for="text">country neam:</label>
+      <label for="text">country neam</label>
       <input type="text" id="text" name="text">
 <!--  -->
-      <label for="text">reigon or state:</label>
+      <label for="text">reigon or state</label>
       <input type="text" id="text" name="text">
 <!--  -->
       <label for="text">city name</label>
